# cz-bitbucket-jira-plugin

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cz_bitbucket_jira_plugin.py  pyproject.toml  setup.py  teste.py
.github/workflows/: tests.yaml
cz_bitbucket_jira_plugin/: constants.py  defaults.py  exceptions.py  functions.py  main.py  validators.py
tests/: conftest.py  constants.py
tests/data/: test_message_data.txt
tests/unit/: test_cz_commit.py  test_cz_commit_output.py
tests/unit/validators/: test_AllValuesMustBeIntegerValidator.py  test_MinimumLengthValidator.py  test_RequiredAnswerValidator.py  test_ValueMustBeIntegerValidator.py
