[tool.poetry]
name = "cz_bitbucket_jira_plugin"
version = "0.1.0"
description = "Commitizen plugin that links your Bitbucket commits with your Jira issues"
authors = ["Marcos Martins <contato@marcosmartins.me>"]
packages = [{include = "cz_bitbucket_jira_plugin"}]

[tool.poetry.dependencies]
python = "^3.8"
commitizen = "^3.24.0"
tomli = "^2.0.1"

[tool.commitizen]
name = "cz_bitbucket_jira_plugin"

[tool.poetry.plugins."commitizen.plugin"]

[tool.ruff]
line-length = 90
indent-width = 4

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
docstring-code-line-length = 99

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
